Xây dựng RestAPI & JPA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+spring.application.name=API
+
+
 # ===============================
 # = DATABASE CONFIGURATION
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/db_pin_vin?useSSL=false&serverTimezone=Asia/Ho_Chi_Minh
+spring.datasource.url=jdbc:mysql://localhost:3306/bsm_db?useSSL=false&serverTimezone=Asia/Ho_Chi_Minh
 spring.datasource.username=root
 spring.datasource.password=minh28052005@@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
