--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,1 @@
-# ===============================
-# = DATABASE CONFIGURATION
-# ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/db_pin_vin?useSSL=false&serverTimezone=Asia/Ho_Chi_Minh
-spring.datasource.username=root
-spring.datasource.password=minh28052005@@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port=80
-
-# ===============================
-# = JPA / HIBERNATE CONFIGURATION
-# ===============================
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.application.name=BatterySwap
